--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,10 @@
 	padding: 0;
 }
 
-body,
+body{
+	    text-align: justify;
+
+}
 html {
 	font-family: 'Poppins', sans-serif;
 	scroll-behavior: smooth;
@@ -65,6 +68,11 @@ nav ul li a:hover {
 	cursor: pointer;
 }
 
+.menu-toggle-name {
+	display:none;
+	margin-left:30%;
+}
+
 .menu-toggle span {
 	width: 25px;
 	height: 3px;
@@ -91,6 +99,10 @@ nav ul li a:hover {
 	}
 
 	.menu-toggle {
+		display: flex;
+	}
+	
+	.menu-toggle-name {
 		display: flex;
 	}
 }
@@ -409,8 +421,7 @@ ul {
     right: 10px;
     font-size: 16px;
     opacity: 0.5;
-	width: 30px;
-	
+	width: 40px;
 }
 
 .dojos-list {
@@ -459,6 +470,60 @@ ul {
 .open-map:hover {
     background-color: #0056b3;
 }
+
+.servicos .content-section ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+}
+
+.servicos .service-item {
+    width: 100%;
+    max-width: 250px; /* Aumenta o tamanho máximo do item */
+    text-align: center;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.3s;
+    box-sizing: border-box;
+}
+
+.servicos .service-item:hover {
+    transform: scale(1.05);
+}
+
+.servicos .service-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover; 
+    display: block;
+}
+
+.servicos .service-item p {
+    margin: 10px 0;
+    padding: 0 10px;
+    font-size: 14px;
+    color: #333;
+}
+
+
+@media (max-width: 768px) {
+    .servicos .service-item {
+        max-width: 100%; 
+        flex: 1 1 100%; 
+    }
+}
+
+@media (max-width: 480px) {
+    .servicos .service-item {
+        max-width: 100%; 
+        flex: 1 1 100%; 
+    }
+}
+
 
 /* Responsividade */
 @media (max-width: 768px) {
