--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,7 @@
 	padding: 0;
 }
 
-body{
-	    text-align: justify;
-
-}
+body,
 html {
 	font-family: 'Poppins', sans-serif;
 	scroll-behavior: smooth;
@@ -509,6 +506,9 @@ ul {
     color: #333;
 }
 
+.justificado {
+	text-align: justify;
+}
 
 @media (max-width: 768px) {
     .servicos .service-item {
