--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ nav ul li a:hover {
 
 .menu-toggle-name {
 	display:none;
-	margin-left:30%;
+	margin-left: 25%;
 }
 
 .menu-toggle span {
@@ -479,7 +479,7 @@ ul {
 
 .servicos .service-item {
     width: 100%;
-    max-width: 250px; /* Aumenta o tamanho máximo do item */
+    max-width: 350px; 
     text-align: center;
     border: 1px solid #ddd;
     border-radius: 10px;
@@ -494,7 +494,7 @@ ul {
 
 .servicos .service-item img {
     width: 100%;
-    height: 200px;
+    height: 75%;
     object-fit: cover; 
     display: block;
 }
