--- a/styles.css
+++ b/styles.css
@@ -510,6 +510,21 @@ ul {
 	text-align: justify;
 }
 
+.styled-link {
+  text-decoration: none;
+  color: #00698f; 
+  background-color: #f2f2f2; 
+  padding: 10px 20px;
+  border-radius: 5px;
+  border: 1px solid #ccc; 
+}
+
+.styled-link:hover {
+  color: #fff; 
+  background-color: #007bff; 
+  border-color: #007bff; 
+}
+
 @media (max-width: 768px) {
     .servicos .service-item {
         max-width: 100%; 
